@@ -1,3 +1,8 @@
+2009-10-27  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-add-attribute)
+	(clearcase-remove-attribute): new functions
+
 2009-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): don't
